<resources>
    <string name="cct">Contacts</string>
    <string name="grp">Groups</string>
    <string name="app_name">ProjetContact</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <!-- NEW CONTACT -->
    <string name="hint_nom">Nom : ...</string>
    <string name="hint_prenom">Prenom : ...</string>
    <string name="hint_age">Age : ...</string>
    <string name="hint_street">Rue : ...</string>
    <string name="hint_town">Ville : ...</string>
    <string name="hint_zip">Code postal : ...</string>
    <!-- NEW NUMERO -->
    <string name="hint_numero">Numero : ...</string>
    <string name="hint_categotie">Categorie : ...</string>
    <!-- NEW GROUP -->
    <string name="hint_grp">Nom du groupe : ...</string>
    <!---->
    <string name="button_new_num">Nouveau numéro</string>
    <string name="ajout_group_dans_contact">Ajout groupe dans contact</string>
    <string name="ajout_contact_dans_grp">Ajout contact dans groupe</string>
    <string name="button_save">Save</string>
    <string name="contact_not_saved">Contact not saved because it is empty.</string>
    <string name="numero_not_saved">Numero not saved because it is empty.</string>
    <string name="group_not_saved">Group not saved because it is empty.</string>
    <string name="contact_group_not_saved">Contact not saved in Group because it is empty.</string>
    <!---->
    <string name="infos">Infos</string>
    <string name="modif">Modification</string>
    <string name="main">Retour main</string>
</resources>
