<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Infomations Contact"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_nom"
                    android:inputType="textAutoComplete"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_prenom"
                    android:inputType="textAutoComplete"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_padding"
                    android:layout_marginBottom="@dimen/big_padding"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_age"
                    android:inputType="textAutoComplete"
                    android:padding="@dimen/small_padding"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informations Adresses"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_street"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edit_town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_town"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edit_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_zip"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Information Numero"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_zip" />

                <EditText
                    android:id="@+id/edit_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_zip" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel" />

            <Button
                android:id="@+id/retour_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Retour Contacts" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>